--- a/CSVCrossJoin/CSVCrossJoin.csproj
+++ b/CSVCrossJoin/CSVCrossJoin.csproj
@@ -8,12 +8,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DatabaseLayer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="DatabaseLayer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CommonServiceLocator" Version="2.0.5" />
-    <PackageReference Include="CsvHelper" Version="12.2.2" />
+    <PackageReference Include="CsvHelper" Version="12.2.3" />
     <PackageReference Include="GenericParser" Version="1.1.6" />
-    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="3.1.0" />
     <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
-    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.112" />
   </ItemGroup>
 
 </Project>
